--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "feather-icons": "^4.29.0",
         "flowbite": "^1.5.3"
     }
 }
