--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /public/bundles/
 /var/
 /vendor/
+.ftpquota
+.DS_Store
+.idea
 ###< symfony/framework-bundle ###
 
 ###> symfony/webpack-encore-bundle ###
