--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "symfony/proxy-manager-bridge": "6.4.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
+        "symfony/stimulus-bundle": "^2.13",
         "symfony/twig-bundle": "7.0.*",
+        "symfony/ux-autocomplete": "^2.13",
         "symfony/validator": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1.1",
         "symfony/yaml": "7.0.*",
