--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/stimulus-bundle": "^2.13",
         "symfony/twig-bundle": "7.0.*",
         "symfony/ux-autocomplete": "^2.13",
+        "symfony/ux-chartjs": "^2.13",
         "symfony/validator": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1.1",
         "symfony/yaml": "7.0.*",
