:bug: Navbar fix + role

--- a/.env
+++ b/.env
@@ -34,5 +34,5 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/Monifus?serverVersion=8&charset=utf8m
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://matheo.zeller@gmail.com:PlayGmail12$Gmail@default
+MAILER_DSN=gmail://@default
 ###< symfony/google-mailer ###
