--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/Monifus?serverVersion=8&charset=utf8m
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://@default
 ###< symfony/google-mailer ###
+
+###> symfony/mailjet-mailer ###
+# MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
+# #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
