--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
         "symfony/flex": "^2",
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
-        "symfony/google-mailer": "7.0.*",
         "symfony/http-client": "7.0.*",
         "symfony/mailer": "7.0.*",
+        "symfony/mailjet-mailer": "7.0.*",
         "symfony/proxy-manager-bridge": "6.4.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
