:sparkles: Roles + fiex

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,10 @@ security:
         #- { path: ^/inscription, roles: [PUBLIC_ACCESS] }
         #- { path: ^/deconnexion, roles: [PUBLIC_ACCESS] }
         #- { path: ^/, roles: ROLE_USER }
-        #- { path: ^/monitor, roles: ROLE_TRUST }
+        - { path: ^/profil, roles: ROLE_USER }
+        - { path: ^/monitor, roles: ROLE_USER }
+        - { path: ^/vente, roles: ROLE_USER }
+        - { path: ^/record/nouveau, roles: ROLE_USER }
 
 when@test:
     security:
