--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@babel/preset-react": "^7.23.3",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
         "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/assets",
+        "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "chart.js": "^3.4.1 <3.9",
         "core-js": "^3.23.0",
         "postcss-loader": "^7.0.1",
+        "react": "^18.0",
+        "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.55.0",
         "sass-loader": "^13.0.0",
@@ -32,6 +36,7 @@
         "chartjs-adapter-moment": "^1.0.1",
         "feather-icons": "^4.29.0",
         "flowbite": "^1.5.3",
-        "moment": "^2.30.1"
+        "moment": "^2.30.1",
+        "postcss": "^8.0.9"
     }
 }
