--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/stimulus-bundle": "^2.13",
+        "symfony/translation": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/ux-autocomplete": "^2.13",
         "symfony/ux-chartjs": "^2.13",
