:sparkles: Register with discord

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            entry_point: App\Security\LoginFormAuthenticator
+            custom_authenticator:
+                - App\Security\LoginFormAuthenticator
+                - App\Security\DiscordAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
