--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.3.0",
         "doctrine/orm": "^2.17",
         "fakerphp/faker": "^1.23",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
+        "league/oauth2-client": "^2.7",
         "symfony/apache-pack": "^1.0",
         "symfony/cache": "7.0.*",
         "symfony/console": "7.0.*",
@@ -35,7 +37,8 @@
         "symfony/webpack-encore-bundle": "^2.1.1",
         "symfony/yaml": "7.0.*",
         "symfonycasts/verify-email-bundle": "^1.12",
-        "vich/uploader-bundle": "^2.3"
+        "vich/uploader-bundle": "^2.3",
+        "wohali/oauth2-discord-new": "^1.2"
     },
     "config": {
         "allow-plugins": {
