--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fakerphp/faker": "^1.23",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-client": "^2.7",
+        "mhujer/breadcrumbs-bundle": "^1.5",
         "symfony/apache-pack": "^1.0",
         "symfony/cache": "7.0.*",
         "symfony/console": "7.0.*",
