--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@react-spring/web": "^9.7.3",
         "chartjs-adapter-moment": "^1.0.1",
         "feather-icons": "^4.29.0",
         "moment": "^2.30.1",
