--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.3.0",
         "doctrine/orm": "^2.17",
         "fakerphp/faker": "^1.23",
+        "knplabs/knp-paginator-bundle": "^6.3",
         "knpuniversity/oauth2-client-bundle": "^2.18",
         "league/oauth2-client": "^2.7",
         "mhujer/breadcrumbs-bundle": "^1.5",
