:recycle: Refactor advices with react

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ error.log
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
+/scripts/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
