--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -46,6 +46,7 @@ security:
         - { path: ^/monitor, roles: ROLE_USER }
         - { path: ^/vente, roles: ROLE_USER }
         - { path: ^/record/nouveau, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
 when@test:
     security:
