--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-client": "7.0.*",
         "symfony/mailer": "7.0.*",
-        "symfony/mailjet-mailer": "7.0.*",
         "symfony/proxy-manager-bridge": "6.4.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
@@ -38,6 +37,7 @@
         "symfony/validator": "7.0.*",
         "symfony/webpack-encore-bundle": "^2.1.1",
         "symfony/yaml": "7.0.*",
+        "symfonycasts/reset-password-bundle": "^1.20",
         "symfonycasts/verify-email-bundle": "^1.12",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
