--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,6 +45,7 @@ security:
         - { path: ^/profil, roles: ROLE_USER }
         - { path: ^/price, roles: ROLE_USER }
         - { path: ^/vente, roles: ROLE_USER }
+        - { path: ^/guilde/nouveau, roles: ROLE_USER }
         - { path: ^/record/nouveau, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
 
