--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -45,8 +45,9 @@ security:
         - { path: ^/profil, roles: ROLE_USER }
         - { path: ^/price, roles: ROLE_USER }
         - { path: ^/vente, roles: ROLE_USER }
-        - { path: ^/guilde/nouveau, roles: ROLE_USER }
-        - { path: ^/record/nouveau, roles: ROLE_USER }
+        - { path: ^/guilde/nouvelle, roles: ROLE_USER }
+        - { path: ^/guilde/rejoindre, roles: ROLE_USER }
+        - { path: ^/record/partir, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
 
 when@test:
