:bug: SEO + robots.txt

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,12 +42,15 @@ security:
         #- { path: ^/inscription, roles: [PUBLIC_ACCESS] }
         #- { path: ^/deconnexion, roles: [PUBLIC_ACCESS] }
         #- { path: ^/, roles: ROLE_USER }
-        - { path: ^/profil, roles: ROLE_USER }
+        - { path: ^/profil$, roles: ROLE_USER }
+        - { path: ^/profil/.*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/price, roles: ROLE_USER }
         - { path: ^/vente, roles: ROLE_USER }
+        - { path: ^/record/nouveau, roles: ROLE_USER }
+        - { path: ^/guildes/nouvelle, roles: ROLE_USER }
         - { path: ^/guildes/nouvelle, roles: ROLE_USER }
         - { path: ^/guildes/rejoindre, roles: ROLE_USER }
-        - { path: ^/record/partir, roles: ROLE_USER }
+        - { path: ^/guildes/partir, roles: ROLE_USER }
         - { path: ^/admin, roles: ROLE_ADMIN }
 
 when@test:
