--- a/.env
+++ b/.env
@@ -36,3 +36,8 @@ APP_SECRET=38ceb62a664a18620717a3bb18b14d00
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=
 ###< symfony/google-mailer ###
+
+###> symfony/mailjet-mailer ###
+# MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
+# #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
