--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-client": "7.0.*",
         "symfony/mailer": "7.0.*",
+        "symfony/mailjet-mailer": "7.0.*",
         "symfony/proxy-manager-bridge": "6.4.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
