--- a/.env
+++ b/.env
@@ -41,3 +41,6 @@ APP_SECRET=38ceb62a664a18620717a3bb18b14d00
 # MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com
 # #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
 ###< symfony/mailjet-mailer ###
+
+DISCORD_CLIENT_ID=1204754526133817344
+DISCORD_CLIENT_SECRET=vhpjAUjyh8cetxqqJ7DKrhdZA5f3T7QB
