--- a/public/.htaccess
+++ b/public/.htaccess
@@ -24,6 +24,9 @@ DirectoryIndex index.php
     RewriteRule ^guildes/?$ / [R=301,L]
     RewriteRule ^guildes/(.*)$ / [R=301,L]
 
+    RewriteRule ^xpetifus/?$ / [R=301,L]
+    RewriteRule ^xpetifus/(.*)$ / [R=301,L]
+
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
